--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 .container {
     padding: 30px;
     border: 2px solid #ddd;
-    background-color: white;
+    background-color: rgb(243, 231, 195);
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
 }
@@ -57,7 +57,7 @@ h3 {
     min-height: 200px;
     padding: 10px;
     margin: 20px 0;
-    /* Ingen bakgrundsfärg? */
+    background-color: rgb(240, 214, 137);
 }
 
 /* TODO: Du behöver CSS för todo-items */
@@ -67,7 +67,7 @@ h3 {
     align-items: center;
     padding: 10px;
     border-bottom: 1px solid #eee;
-    background-color: white;
+    background-color: rgb(243, 231, 195);
 }
 
 .todo-item:hover {
@@ -107,7 +107,7 @@ h3 {
 
 /* Statistik */
 .stats {
-    background-color: #ddd;
+    background-color: rgb(240, 214, 137);
     padding: 10px;
     text-align: center;
     font-size: 18px;
