--- a/style.css
+++ b/style.css
@@ -135,3 +135,26 @@ h3 {
     color: #d63384;
     font-family: monospace;
 }
+
+@media (max-width: 600px) {
+  .container {
+    padding: 20px;
+  }
+
+  .input-section {
+    flex-direction: column;
+    align-items: stretch;
+  }
+
+  #todo-input {
+    width: 90%;
+    margin-bottom: 10px;
+  }
+
+  .add-button,
+  .clear-button {
+    width: 100%;
+    margin-left: 0;
+    margin-top: 10px;
+  }
+}
